processes have to be stopped before setup an be started. Some usability

--- a/.gitignore
+++ b/.gitignore
@@ -8,114 +8,8 @@ devenv.local.nix
 # pre-commit
 .pre-commit-config.yaml
 .DS_Store
-.idea
-nbproject
-/var/*
-!/var/labels
-/vendor
-/public/*
-!/public/.htaccess
-!/public/typo3conf
-/public/typo3conf/*
-!/public/typo3conf/LocalConfiguration.php
-!/public/typo3conf/AdditionalConfiguration.php
-.DS_Store
-.idea
-nbproject
-/var/*
-!/var/labels
-/vendor
-/public/*
-!/public/.htaccess
-!/public/typo3conf
-/public/typo3conf/*
-!/public/typo3conf/LocalConfiguration.php
-!/public/typo3conf/AdditionalConfiguration.php
-.DS_Store
-.idea
-nbproject
-/var/*
-!/var/labels
-/vendor
-/public/*
-!/public/.htaccess
-!/public/typo3conf
-/public/typo3conf/*
-!/public/typo3conf/LocalConfiguration.php
-!/public/typo3conf/AdditionalConfiguration.php
-.DS_Store
-.idea
-nbproject
-/var/*
-!/var/labels
-/vendor
-/public/*
-!/public/.htaccess
-!/public/typo3conf
-/public/typo3conf/*
-!/public/typo3conf/LocalConfiguration.php
-!/public/typo3conf/AdditionalConfiguration.php
-.DS_Store
-.idea
-nbproject
-/var/*
-!/var/labels
-/vendor
-/public/*
-!/public/.htaccess
-!/public/typo3conf
-/public/typo3conf/*
-!/public/typo3conf/LocalConfiguration.php
-!/public/typo3conf/AdditionalConfiguration.php
-.DS_Store
-.idea
-nbproject
-/var/*
-!/var/labels
-/vendor
-/public/*
-!/public/.htaccess
-!/public/typo3conf
-/public/typo3conf/*
-!/public/typo3conf/LocalConfiguration.php
-!/public/typo3conf/AdditionalConfiguration.php
-.DS_Store
-.idea
-nbproject
-/var/*
-!/var/labels
-/vendor
-/public/*
-!/public/.htaccess
-!/public/typo3conf
-/public/typo3conf/*
-!/public/typo3conf/LocalConfiguration.php
-!/public/typo3conf/AdditionalConfiguration.php
-.DS_Store
-.idea
-nbproject
-/var/*
-!/var/labels
-/vendor
-/public/*
-!/public/.htaccess
-!/public/typo3conf
-/public/typo3conf/*
-!/public/typo3conf/LocalConfiguration.php
-!/public/typo3conf/AdditionalConfiguration.php
-.DS_Store
-.idea
-nbproject
-/var/*
-!/var/labels
-/vendor
-/public/*
-!/public/.htaccess
-!/public/typo3conf
-/public/typo3conf/*
-!/public/typo3conf/LocalConfiguration.php
-!/public/typo3conf/AdditionalConfiguration.php
-.DS_Store
+
+# TYPO3
 .idea
 nbproject
 /var/*
